# Nulla

./: .gitignore  CONSENSUS.md  Cargo.toml  README.md  mine_genesis.rs  test_genesis.rs
crates/nulla-consensus/: Cargo.toml
crates/nulla-consensus/src/: difficulty.rs  error.rs  lib.rs  pow.rs  validate.rs  work.rs
crates/nulla-consensus/tests/: difficulty_clamp.rs  pow_vectors.rs
crates/nulla-core/: Cargo.toml
crates/nulla-core/src/: constants.rs  crypto.rs  lib.rs  serialization.rs  types.rs
crates/nulla-node/: Cargo.toml
crates/nulla-node/src/: chain_store.rs  lib.rs  main.rs  mempool.rs  rpc.rs
crates/nulla-p2p/: Cargo.toml
crates/nulla-p2p/src/: net.rs
crates/nulla-state/: Cargo.toml
crates/nulla-state/src/: apply.rs  error.rs  lib.rs  merkle.rs  nullifier.rs  utxo.rs
crates/nulla-wallet/: Cargo.toml
crates/nulla-wallet/src/: lib.rs  main.rs  rpc_client.rs
crates/nulla-zk/: Cargo.toml
docs/: launch-checklist.md  mainnet-plan.md  multinode.md  relay-automatic.md
examples/: mine_genesis.rs  print_genesis.rs
nulla.chain.db/: db  snap.000000000004233C
nulla.chain.p2p.db/: db  snap.000000000004BAC5
tests/vectors/: pow_header.json
