[package]
name = "nulla-consensus"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Nulla PoW consensus rules: block hashing, difficulty, and validation."

[dependencies]
nulla-core = { path = "../nulla-core" }
thiserror = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
time = { version = "0.3", features = ["macros"] }

# Optional serde feature passthrough (useful later for RPC/debug)
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5"

[features]
default = []
serde = ["dep:serde", "nulla-core/serde"]
dev-pow = []
