[package]
name = "nulla-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Nulla node (v0) – minimal single-node miner."

[dependencies]
nulla-core = { path = "../nulla-core" }
nulla-consensus = { path = "../nulla-consensus" }
nulla-state = { path = "../nulla-state" }

time = "0.3"
