[package]
name = "nulla-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Nulla node (v0) – minimal single-node miner."

[dependencies]
nulla-core = { path = "../nulla-core" }
nulla-consensus = { path = "../nulla-consensus" }
nulla-state = { path = "../nulla-state" }

time = "0.3"
num-bigint = "0.4"
sled = "0.34"
borsh = "1.5"

[features]
default = []
dev-pow = ["nulla-consensus/dev-pow"]

[dev-dependencies]
serde_json = "1.0"
hex = "0.4"
tempfile = "3.10"
