[package]
name = "nulla-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Nulla node (v0) — minimal single-node miner."

[lib]
name = "nulla_node"
path = "src/lib.rs"

[dependencies]
nulla-core = { path = "../nulla-core" }
nulla-consensus = { path = "../nulla-consensus" }
nulla-state = { path = "../nulla-state" }
nulla-p2p = { path = "../nulla-p2p" }

blake3 = "1.5"
bs58 = "0.5"
k256 = { version = "0.13", features = ["ecdsa"] }
time = "0.3"
num-bigint = "0.4"
sled = "0.34"
borsh = "1.5"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
igd = { version = "0.12", default-features = false, features = ["aio", "tokio"] }

[features]
default = []
dev-pow = ["nulla-consensus/dev-pow"]

[dev-dependencies]
tempfile = "3.10"
