[package]
name = "nulla-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sled = "0.34"
borsh = "1.5"
bs58 = "0.5"
blake3 = "1.5"
k256 = "0.13"
rand_core = "0.6"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = "1.6"
rpassword = "7.3"
anyhow = "1.0"
hex = "0.4"
nulla-core = { path = "../nulla-core" }
nulla-node = { path = "../nulla-node" }
